@@ -65,6 +65,13 @@ public class SentryHandler extends Handler {
      * Might be null in which case the release information will not be sent with the event.
      */
     protected String release;
+
+    /**
+     * Identifies the distribution of the application.
+     * <p>
+     * Might be null in which case the release distribution will not be sent with the event.
+     */
+    protected String dist;
     /**
      * Identifies the environment the application is running in.
      * <p>
@@ -340,6 +347,9 @@ public class SentryHandler extends Handler {
 
         if (!Util.isNullOrEmpty(release)) {
             eventBuilder.withRelease(release.trim());
+            if (!Util.isNullOrEmpty(dist)) {
+                eventBuilder.withDist(dist.trim());
+            }
         }
 
         if (!Util.isNullOrEmpty(environment)) {
@@ -404,6 +414,10 @@ public class SentryHandler extends Handler {
 
     public void setRelease(String release) {
         this.release = release;
+    }
+
+    public void setDist(String dist) {
+        this.dist = dist;
     }
 
     public void setEnvironment(String environment) {
