@@ -8,13 +8,13 @@
   "culprit": null,
   "tags": {},
   "server_name": null,
-  "release": null,
-  "dist": null,
+  "release": "release",
+  "dist": "dist",
   "environment": null,
   "extra": {},
   "checksum": null,
   "sdk": {
-    "name": "sdkName",
-    "version": "sdkVersion"
+    "name": null,
+    "version": null
   }
 }
