@@ -9,6 +9,7 @@
   "tags": {},
   "server_name": null,
   "release": null,
+  "dist": null,
   "environment": "environment",
   "extra": {},
   "checksum": null,
