@@ -11,6 +11,7 @@
     },
     "server_name": null,
     "release": null,
+    "dist": null,
     "environment": null,
     "extra": {},
     "checksum": null,
