@@ -3,6 +3,7 @@ Version 1.0.0
 
 - Rename from ``raven-java`` to ``sentry-java``.
 - Move from ``com.getsentry.raven`` package to ``io.sentry``.
+- Add ``dist`` field to Event.
 
 Version 8.0.2
 -------------
